# FastApiProjects2

./: README.md  pyproject.toml  sql_app.db
app/: flowers_repository.py  main.py  models.py  purchases_repository.py  users_repository.py
migrations/: env.py
migrations/versions/: 40f22ab70de9_users_create.py
