[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["dinmukhammed <arystambekdimash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.19"
attrs = "^23.1.0"
pydantic = {extras = ["email"], version = "^2.0.3"}
alembic = "^1.11.1"
uvicorn = "^0.23.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
